--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
 	<!-- Css simplebar -->
 	<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/simplebar/5.3.9/simplebar.min.css' />
 
-	<title>Loading... | KI2 Helper</title>
+	<title>Loading... | Chickenbreast</title>
 	<meta name='author' content='https://t.me/pulsef1re' />
 </head>
 
